--- a/eduwork.html
+++ b/eduwork.html
@@ -37,7 +37,7 @@
 </li>
 <li><p>2008 - 2013: Bachelor Degree (BE) in Electronics and Telecommunications Engineering at Hanoi University of Science and Technology, Hanoi, Vietnam</p>
 </li>
-<li><p>2005 - 2008: Donggia High School, Hai Duong, Vietnam. </p>
+<li><p>2005 - 2008: Donggia High School, Hai Duong, Vietnam</p>
 </li>
 </ul>
 <p></div></p>
@@ -64,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 14:56:03 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-10 10:02:39 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
