--- a/publication.html
+++ b/publication.html
@@ -79,7 +79,7 @@
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; under revision, <i>IEEE Network</i>.</p>
 </li>
-<li><p>Parimala M, Swarna Priya R M, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
+<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
 <li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
 </li>
@@ -102,7 +102,7 @@
 </li>
 <li><p>D. C. Nguyen, <b>Q.-V. Pham</b>, P. N. Pathirana, M. Ding, A. Seneviratne, J. Lin, O. A. Dobre, and W.-J. Hwang, &ldquo;<a href="https://www.researchgate.net/publication/356268433_Federated_Learning_for_Smart_Healthcare_A_Survey">Federated Learning for Smart Healthcare: A Survey</a>,&rdquo; <i>ACM Computing Surveys</i>, in press.</p>
 </li>
-<li><p>M. Alazab, Swarna Priya RM, Parimala M, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, in press.</p>
+<li><p>M. Alazab, R. M. Swarna Priya, M. Parimala, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, in press.</p>
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
@@ -286,7 +286,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 17:24:49 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-10 10:10:15 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
