--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="225px" />&nbsp;</td>
-<td align="left"><p><a href="mailto:vietpq@pusan.ac.kr">Quoc-Viet PHAM</a>
-(<a href="http://vietnam.vn/"><img src="Misc\Flag_of_Vietnam.png" alt="NZ" /></a>) <br />
+<td align="left"><p><a href="mailto:vietpq@pusan.ac.kr">Quoc-Viet PHAM</a> <br />
 Research Professor, Ph.D. <br /> 
 <a href="http://www.pusan.ac.kr/eng/">Pusan National University</a> <br /></p>
 <ul>
@@ -43,7 +42,7 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://publons.com/researcher/1885326/quoc-viet-pham/">Publons</a></p>
 </li>
-<li><p>Address: No. 310-2, ABC Center, Pusan National University, Yangsan Campus, 49, Busandaehak-ro, Mulgeum-eup, Yangsan-si, Gyeongsangnam-do 50612, Korea</p>
+<li><p>Address: No. 310-2, ABC Center, Pusan National University, 49, Busandaehak-ro, Mulgeum-eup, Yangsan-si, Gyeongsangnam-do 50612, Korea</p>
 </li>
 </ul>
 </td></tr></table>
@@ -63,7 +62,7 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[01/2022] Our work on <a href="https://ieeexplore.ieee.org/document/9569742">blockchain for edge of things</a> (edge computing + IoT) has been published by the IEEE Internet of Things Journal. <br /></p>
+<li><p>[01/2022] Our work on <a href="https://ieeexplore.ieee.org/document/9569742">blockchain for edge of things</a> edge computing + IoT) has been published by the IEEE Internet of Things Journal. <br /></p>
 </li>
 <li><p>[12/2021] I have received the golden globe award 2021 from the Ministry of Science and Technology, Vietnam. <br /></p>
 </li>
@@ -140,7 +139,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of the Journal of Network and Computer Applications (Elsevier), an associate editor of the Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 17:23:04 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-10 10:13:20 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
