--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[01/2022] Our work on <a href="https://ieeexplore.ieee.org/document/9569742">blockchain for edge of things</a> edge computing + IoT) has been published by the IEEE Internet of Things Journal. <br /></p>
+<li><p>[01/2022] Congratulations! Two papers on <a href="">UAV-federated learning</a> and <a href="">DL for joint radar-communication systems</a> are accepted for presentation at IEEE ICC 2022 (Seoul, Korea). </p>
+</li>
+<li><p>[01/2022] Our work on <a href="https://ieeexplore.ieee.org/document/9569742">blockchain for edge of things</a> (edge computing + IoT) has been published by the IEEE Internet of Things Journal. <br /></p>
 </li>
 <li><p>[12/2021] I have received the golden globe award 2021 from the Ministry of Science and Technology, Vietnam. <br /></p>
 </li>
 <li><p>[12/2021] I have received an award from the Minister of Education (Korea) for outstanding contributions and research excellence. <br /></p>
 </li>
-<li><p>[10/2021] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> We won the FDCRGP Grant ($136,000 for 2022-2024) for our research on Edge Learning for Video Surveillance (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
+<li><p>[10/2021] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on Edge Learning for Video Surveillance (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
 </li>
 <li><p>[10/2021] Our work on <a href="https://ieeexplore.ieee.org/document/9584850">DRL for energy-efficient FL-UAV</a> has been accepted by the IEEE Communications Letters. <br /></p>
 </li>
@@ -78,7 +80,7 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>[08/2021] Our works on <a href="https://ieeexplore.ieee.org/document/9528850">secrecy cooperative NOMA</a> and <a href="https://ieeexplore.ieee.org/document/9525446">UAV communications</a> have been accepted by the IEEE Internet of Things Journal. <br /></p>
 </li>
-<li><p>[08/2021] Our collaborative work on <a href="https://ieeexplore.ieee.org/abstract/document/9514563">reconfigurable intelligent surfaces</a> has been accepted by the IEEE Transactions on Communications. <br /></p>
+<li><p>[08/2021] Our work on <a href="https://ieeexplore.ieee.org/abstract/document/9514563">reconfigurable intelligent surfaces</a> has been accepted by the IEEE Transactions on Communications. <br /></p>
 </li>
 <li><p>[07/2021] Congratulations <a href="https://sites.google.com/site/thienhuynhthe/home">Dr. Huynh</a>, our work on <a href="https://ieeexplore.ieee.org/document/9475953">radar waveform recognition</a> has been accepted by the IEEE Communications Letters. <br /></p>
 </li>
@@ -100,7 +102,7 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>[10/2019] My paper on <a href="https://ieeexplore.ieee.org/document/8917566">MEC-NOMA using coalitional games</a> has been published by the IEEE Transactions on Vehicular Technology.</p>
 </li>
-<li><p>[12/2018] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> I have received a 5-year project from Korea NRF (Feb. 2019 - Feb. 2024).</p>
+<li><p>[12/2018] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> I have received a 5-year project from Korea NRF (500,000,000 KRW for Feb. 2019 - Feb. 2024).</p>
 </li>
 </ul>
 <p></div></p>
@@ -139,7 +141,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of the Journal of Network and Computer Applications (Elsevier), an associate editor of the Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-10 10:13:20 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-19 14:16:25 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
