--- a/publication.html
+++ b/publication.html
@@ -42,11 +42,13 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; Chapter 11, in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications</a>, Springer, 2021 [Eds].</p>
+<li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications</a>, Springer, 2021 [Eds].</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; Chapter 5, in Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions, IET, expected 2022 [Eds].</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &lsquo;&lsquo;<a href="">The Emergence of Aerial Computing: Architecture, Applications, and Challenges</a>," in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022 <a href="Eds">Eds</a>.</p>
 </li>
-<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; Chapter 7, in Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions, IET, expected 2022 [Eds].</p>
+<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, expected 2022 [Eds].</p>
+</li>
+<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, expected 2022 [Eds].</p>
 </li>
 </ol>
 <p></div></p>
@@ -94,7 +96,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
-<li><p>M. Le, <b>Q.-V. Pham</b>, H.-C. Kim, and W.-J. Hwang, &ldquo;<a href="">Enhanced Resource Allocation in D2D Communications with NOMA and Unlicensed Spectrum</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
+<li><p>M. Le, <b>Q.-V. Pham</b>, H.-C. Kim, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9676557">Enhanced Resource Allocation in D2D Communications with NOMA and Unlicensed Spectrum</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
 </li>
 <li><p>B. M. ElHalawany, E. M. Mohamed, <b>Q.-V. Pham</b>, K. Wu, and AAA El-Banna, &ldquo;<a href="https://ieeexplore.ieee.org/document/9656772">Spectrum Sharing in Cognitive-Radio Inspired NOMA Systems under Imperfect SIC and Co-Channel Interference</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
 </li>
@@ -234,6 +236,10 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
+<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">UAV-enabled Wireless Powered Communication for Energy-Efficient Federated Learning</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May. 2022.  </p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RaComNet: High-Performance Deep Network for Waveform Recognition in Coexistence Radar-Communication Systems</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May. 2022.</p>
+</li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://www.dropbox.com/s/j1sh4zbqtooa7u7/1570766888_wcnc_2022.pdf?dl=0">Automatic Modulation Classification with Low-Cost Attention Network for Impaired OFDM Signals</a>,&rdquo; in <i>IEEE Wireless Communications and Networking Conference (WCNC)</i>, Austin, TX, USA, Apr. 2022.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, V.-S. Doan, N. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://www.researchgate.net/publication/355203186_Densely-Accumulated_Convolutional_Network_for_Accurate_LPI_Radar_Waveform_Recognition">Densely-Accumulated Convolutional Network for Accurate LPI Radar Waveform Recognition</a>,&rdquo; in <i>IEEE Global Communications Conference (GLOBECOM)</i>, Madrid, Spain, Dec. 2021.</p>
@@ -286,7 +292,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-10 10:10:15 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-19 14:39:28 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
