--- a/activity.html
+++ b/activity.html
@@ -37,9 +37,7 @@
 </li>
 <li><p><a href="https://www.frontiersin.org/journals/communications-and-networks">Frontiers in Communications and Networks</a> [Associate Editor]</p>
 </li>
-<li><p><a href="https://www.frontiersin.org/journals/space-technologies">Frontiers in Space Technologies</a> [Guest Editor, Special Issue-Communication Efficient Edge Learning for Unmanned Aerial Vehicle Networks]</p>
-</li>
-<li><p><a href="https://www.mdpi.com/journal/sensors">Sensor</a> [Guest Editor, Special Issue-<a href="https://www.mdpi.com/journal/sensors/special_issues/SPIoTSecurity">and Privacy in the Internet of Things (IoT)</a>]</p>
+<li><p><a href="https://www.mdpi.com/journal/sensors">Sensor</a> [Guest Editor, Special Issue-<a href="https://www.mdpi.com/journal/sensors/special_issues/SPIoT">Security and Privacy in the Internet of Things (IoT)</a>]</p>
 </li>
 </ul>
 <p></div></p>
@@ -123,7 +121,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 15:46:49 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-24 10:04:11 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
