--- a/publication.html
+++ b/publication.html
@@ -73,7 +73,7 @@
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">High-Performance Convolutional Network for RF-Based Drone Surveillance</a>,&rdquo; under review, <i>IEEE Systems Journals</i>.</p>
 </li>
-<li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under review, <i>ACM Computing Surveys</i>.</p>
+<li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under revision, <i>ACM Computing Surveys</i>.</p>
 </li>
 <li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>" under review, <i>Proceedings of the IEEE</i>.</p>
 </li>
@@ -84,8 +84,6 @@
 <li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
 <li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
-</li>
-<li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://arxiv.org/abs/2009.00858">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; under revision, <i>Future Generation Computer Systems</i>.</p>
 </li>
 <li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; under revision, <i>IEEE Network</i>.</p>
 </li>
@@ -112,7 +110,11 @@
 </li>
 <li><p>H. Yang, R. Ruby, <b>Q.-V. Pham</b>, and K. Wu, &ldquo;<a href="https://ieeexplore.ieee.org/document/9525446">Aiding a Disaster Spot via Multi-UAV-based IoT Networks: Energy and Mission Completion Time-Aware Trajectory Optimization</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press. </p>
 </li>
+<li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://arxiv.org/abs/2009.00858">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; <i>Future Generation Computer Systems</i>, in press.</p>
+</li>
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, B. Prabadevi, N. Deepa, K. Dev, T. R. Gadekallu, R. Ruby, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S2452414X21000558">Industry 5.0: A Survey on Enabling Technologies and Potential Applications</a>,&rdquo; <i>Journal of Industrial Information Integration</i>, in press.</p>
+</li>
+<li><p>R. M. Swarna Priya, M. Parimala, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
 </li>
@@ -292,7 +294,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-19 14:42:18 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-24 09:59:14 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
