--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@ Research Professor, Ph.D. <br />
 <p><div id="Research Interests"></p>
 <h2>Research Interests</h2>
 <ul>
-<li><p>Edge Computing and Resource Optimization</p>
+<li><p><b>Edge Computing</b>: resource optimization, edge of things, and edge AI.</p>
 </li>
-<li><p>Wireless for AI (Wireless AI)</p>
+<li><p><b>Future Networks</b>: 6G, Internet of Things, intelligent surfaces, and blockchain. </p>
 </li>
-<li><p>Machine Learning for Future Networks</p>
+<li><p><b>Wireless AI</b>: communication-efficient federated learning, sustainable AI, and secure learning.</p>
+</li>
+<li><p><b>AI for Future Networks</b>: deep learning, deep reinforcement learning, and federated learning.</p>
 </li>
 </ul>
 <p></div></p>
@@ -121,7 +123,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of the Journal of Network and Computer Applications (Elsevier), an associate editor of the Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-24 10:00:34 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-24 10:19:10 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
