--- a/publication.html
+++ b/publication.html
@@ -79,8 +79,6 @@
 </li>
 <li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2101.07394">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>," under review, <i>IEEE Network</i>.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; under revision, <i>IEEE Network</i>.</p>
-</li>
 <li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
 <li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
@@ -94,11 +92,11 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
+</li>
 <li><p>M. Le, <b>Q.-V. Pham</b>, H.-C. Kim, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9676557">Enhanced Resource Allocation in D2D Communications with NOMA and Unlicensed Spectrum</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
 </li>
 <li><p>B. M. ElHalawany, E. M. Mohamed, <b>Q.-V. Pham</b>, K. Wu, and AAA El-Banna, &ldquo;<a href="https://ieeexplore.ieee.org/document/9656772">Spectrum Sharing in Cognitive-Radio Inspired NOMA Systems under Imperfect SIC and Co-Channel Interference</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
-</li>
-<li><p>H. Ta, <b>Q-V. Pham</b>, K. Ho-Van, and S. W. Kim, &ldquo;<a href="https://link.springer.com/article/10.1007/s11276-021-02828-3">Covert communication with noise and channel uncertainties</a>,&rdquo; <i>Wireless Networks</i>, in press.</p>
 </li>
 <li><p>D. C. Nguyen, <b>Q.-V. Pham</b>, P. N. Pathirana, M. Ding, A. Seneviratne, J. Lin, O. A. Dobre, and W.-J. Hwang, &ldquo;<a href="https://www.researchgate.net/publication/356268433_Federated_Learning_for_Smart_Healthcare_A_Survey">Federated Learning for Smart Healthcare: A Survey</a>,&rdquo; <i>ACM Computing Surveys</i>, in press.</p>
 </li>
@@ -114,7 +112,11 @@
 </li>
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, B. Prabadevi, N. Deepa, K. Dev, T. R. Gadekallu, R. Ruby, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S2452414X21000558">Industry 5.0: A Survey on Enabling Technologies and Potential Applications</a>,&rdquo; <i>Journal of Industrial Information Integration</i>, in press.</p>
 </li>
+<li><p>T.-T. Dao, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="10.1109/ACCESS.2022.3145969">FastMDE: A Fast CNN Architecture for Monocular Depth Estimation at High Resolution</a>,&rdquo; <i>IEEE Access</i>, in press.</p>
+</li>
 <li><p>R. M. Swarna Priya, M. Parimala, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
+</li>
+<li><p>H. Ta, <b>Q-V. Pham</b>, K. Ho-Van, and S. W. Kim, &ldquo;<a href="https://link.springer.com/article/10.1007/s11276-021-02828-3">Covert communication with noise and channel uncertainties</a>,&rdquo; <i>Wireless Networks</i>, vol. 28, no. 1, pp. 161-172, Jan. 2022.</p>
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
 </li>
@@ -294,7 +296,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-24 09:59:14 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-30 14:26:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
