--- a/publication.html
+++ b/publication.html
@@ -100,8 +100,6 @@
 </li>
 <li><p>B. M. ElHalawany, E. M. Mohamed, <b>Q.-V. Pham</b>, K. Wu, and AAA El-Banna, &ldquo;<a href="https://ieeexplore.ieee.org/document/9656772">Spectrum Sharing in Cognitive-Radio Inspired NOMA Systems under Imperfect SIC and Co-Channel Interference</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
 </li>
-<li><p>M. Alazab, R. M. Swarna Priya, M. Parimala, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, in press.</p>
-</li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
 <li><p>R. Ruby, <b>Q.-V. Pham</b>, K. Wu, A. A. Heidari, H. Chen, and B. M. ElHalawany, &ldquo;<a href="https://ieeexplore.ieee.org/document/9528850">Enhancing Secrecy Performance of Cooperative NOMA-based IoT Networks via Multi-Antenna Aided Artificial Noise</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
@@ -115,6 +113,8 @@
 <li><p>T.-T. Dao, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9690863">FastMDE: A Fast CNN Architecture for Monocular Depth Estimation at High Resolution</a>,&rdquo; <i>IEEE Access</i>, in press.</p>
 </li>
 <li><p>D. C. Nguyen, <b>Q.-V. Pham</b>, P. N. Pathirana, M. Ding, A. Seneviratne, J. Lin, O. A. Dobre, and W.-J. Hwang, &ldquo;<a href="https://dl.acm.org/doi/10.1145/3501296">Federated Learning for Smart Healthcare: A Survey</a>,&rdquo; <i>ACM Computing Surveys</i>, vol. 55, no. 3, pp. 1-37, Apr. 2023.</p>
+</li>
+<li><p>M. Alazab, R. M. Swarna Priya, M. Parimala, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, vol. 18, no. 5, pp. 3501-3509, May 2022.</p>
 </li>
 <li><p>R. M. Swarna Priya, M. Parimala, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
 </li>
@@ -298,7 +298,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-05 00:06:05 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-05 14:03:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
