--- a/publication.html
+++ b/publication.html
@@ -69,8 +69,6 @@
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large-Scale IoT Networks</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
-</li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, V.-S. Doan, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; under revision, <i>IEEE Systems Journals</i>.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">High-Performance Convolutional Network for RF-Based Drone Surveillance</a>,&rdquo; under review, <i>IEEE Systems Journals</i>.</p>
@@ -94,6 +92,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+</li>
 <li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
 </li>
 <li><p>M. Le, <b>Q.-V. Pham</b>, H.-C. Kim, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9676557">Enhanced Resource Allocation in D2D Communications with NOMA and Unlicensed Spectrum</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
@@ -298,7 +298,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-05 14:03:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-06 16:01:08 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
