--- a/publication.html
+++ b/publication.html
@@ -65,7 +65,7 @@
 </li>
 <li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under review, <i>IEEE Transactions on Communications</i>.</p>
+<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
@@ -94,6 +94,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo;  <i>IEEE Transactions on Green Communications and Networking</i>, in press.</p>
+</li>
 <li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
@@ -300,7 +302,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-08 12:33:51 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-09 22:16:12 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
