--- a/publication.html
+++ b/publication.html
@@ -63,7 +63,7 @@
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2106.09261">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; under revision, <i>IEEE Transactions on Mobile Computing</i>.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+<li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
@@ -96,7 +96,7 @@
 <ol>
 <li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo;  <i>IEEE Transactions on Green Communications and Networking</i>, in press.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
 </li>
@@ -110,19 +110,19 @@
 </li>
 <li><p>H. Yang, R. Ruby, <b>Q.-V. Pham</b>, and K. Wu, &ldquo;<a href="https://ieeexplore.ieee.org/document/9525446">Aiding a Disaster Spot via Multi-UAV-based IoT Networks: Energy and Mission Completion Time-Aware Trajectory Optimization</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press. </p>
 </li>
-<li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://authors.elsevier.com/sd/article/S0167-739X(22)00024-3">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; <i>Future Generation Computer Systems</i>, in press.</p>
-</li>
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, B. Prabadevi, N. Deepa, K. Dev, T. R. Gadekallu, R. Ruby, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S2452414X21000558">Industry 5.0: A Survey on Enabling Technologies and Potential Applications</a>,&rdquo; <i>Journal of Industrial Information Integration</i>, in press.</p>
 </li>
-<li><p>T.-T. Dao, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9690863">FastMDE: A Fast CNN Architecture for Monocular Depth Estimation at High Resolution</a>,&rdquo; <i>IEEE Access</i>, in press.</p>
-</li>
 <li><p>D. C. Nguyen, <b>Q.-V. Pham</b>, P. N. Pathirana, M. Ding, A. Seneviratne, J. Lin, O. A. Dobre, and W.-J. Hwang, &ldquo;<a href="https://dl.acm.org/doi/10.1145/3501296">Federated Learning for Smart Healthcare: A Survey</a>,&rdquo; <i>ACM Computing Surveys</i>, vol. 55, no. 3, pp. 1-37, Apr. 2023.</p>
+</li>
+<li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://authors.elsevier.com/sd/article/S0167-739X(22)00024-3">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 131, pp 209-226, Jun. 2022.</p>
 </li>
 <li><p>M. Alazab, R. M. Swarna Priya, M. Parimala, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, vol. 18, no. 5, pp. 3501-3509, May 2022.</p>
 </li>
 <li><p>R. M. Swarna Priya, M. Parimala, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
 </li>
 <li><p>H. Ta, <b>Q-V. Pham</b>, K. Ho-Van, and S. W. Kim, &ldquo;<a href="https://link.springer.com/article/10.1007/s11276-021-02828-3">Covert communication with noise and channel uncertainties</a>,&rdquo; <i>Wireless Networks</i>, vol. 28, no. 1, pp. 161-172, Jan. 2022.</p>
+</li>
+<li><p>T.-T. Dao, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9690863">FastMDE: A Fast CNN Architecture for Monocular Depth Estimation at High Resolution</a>,&rdquo; <i>IEEE Access</i>, vol. 10, pp. 16111-16122, Jan. 2022.</p>
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
 </li>
@@ -302,7 +302,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-09 22:16:12 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-16 09:52:59 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
